--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "@discordjs/rest": "^0.5.0",
     "@google-cloud/vision": "^2.4.2",
+    "chance": "^1.1.11",
     "discord-api-types": "^0.36.2",
     "discord.js": "^13.9.0",
     "dotenv": "^16.0.1",
