--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -24,11 +25,8 @@
   },
   "homepage": "https://github.com/davidxdeveloper/throttlebot-verification#readme",
   "dependencies": {
-    "@discordjs/rest": "^0.5.0",
-    "@google-cloud/vision": "^2.4.2",
     "chance": "^1.1.11",
-    "discord-api-types": "^0.36.2",
-    "discord.js": "^13.9.0",
+    "discord.js": "^14.17.2",
     "dotenv": "^16.0.1",
     "escape-string-regexp": "^5.0.0",
     "moment": "^2.29.4",
