--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "escape-string-regexp": "^5.0.0",
     "moment": "^2.29.4",
     "mongoose": "^6.4.6",
+    "node-fetch": "^3.3.2",
     "validate.io-color-hexadecimal": "^1.0.0"
   }
 }
