--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "backfill:brands": "node scripts/backfillBrands.js"
+    "backfill:brands": "node scripts/backfillBrands.js",
+    "enrich:brands:ai": "node scripts/enrichBrandsOpenAI.js"
   },
   "repository": {
     "type": "git",
